[tool.poetry]
name = "mubi-live"
version = "0.1.0"
description = ""
authors = ["Mathieu Dhondt <laundro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
tweepy = "^3.10.0"
loguru = "^0.5.3"
arrow = "^0.17.0"
faunadb = "^4.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
